<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Fairphone Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modifications (MN 2013-12-16):
- Added License
- Added airplane_mode_enabled, silent_mode_enabled and btn_off_widget
-->
<resources>

    <string name="app_name">Peace of Mind</string>
    <string name="peace_of_mind_widget">Peace of Mind</string>
    
    <!--<string name="widget_enjoy_some_peace">Enjoy some Peace</string>-->
    <string name="at">At</string>
    <string name="peace">Peace</string>
    
    <string name="help_string_1">We become more conscious of our phones as our lives become increasingly connected\n\nWould you like to disconnect, if only for a moment?</string>
    <string name="help_string_2">Your phone will go silent and disconnect from the world: no e-mail, no status updates, no SMS and no phone calls</string>
    <string name="help_string_3">Choose how long you wish to disconnect (up to 3 hours)\n\nMeanwhile, you can still play games or use off-line apps</string>
    
    <string name="enjoy">Enjoy</string>
    <string name="some">Some</string>
    <string name="to_m">To</string>    
    <string name="to_h">To</string>
    <string name="hour_separator">h</string>
    
    <string name="peace_on_notification">At peace</string>
    <string name="peace_off_notification">Peace of Mind is off</string>

    <string name="btn_off_widget">Close</string>
    <string name="airplane_mode_enabled">Airplane mode is ON</string>
    <string name="silent_mode_enabled">Sound is OFF</string>
</resources>