<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/offGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/widgetOffImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_off" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/WidgetOffBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enjoy" />

            <TextView
                style="@style/WidgetOffLightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some" />

            <TextView
                style="@style/WidgetOffBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peace" />
        </LinearLayout>
    </LinearLayout>

</merge>