<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/backgroundOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_off_repeat" />

    <VideoView
        android:id="@+id/pomVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:id="@+id/backgroundGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_grid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp" >

            <LinearLayout
                android:id="@+id/timeTextCurrentGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/verticalSeekBar"
                android:layout_toLeftOf="@+id/verticalSeekBar"
                android:gravity="center_vertical|right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/timeTextCurrent"
                    style="@style/TimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"/>

                <LinearLayout
                    android:id="@+id/toTimeGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/toText"
                        style="@style/ToText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:text="@string/to_m" />

                    <TextView
                        android:id="@+id/toTimeText"
                        style="@style/ToTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:paddingRight="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inPeaceTextCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/verticalSeekBar"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/verticalSeekBar"
                android:alpha="0.5"
                android:gravity="center_vertical"
                android:paddingTop="3dp" >

                <TextView
                    android:id="@+id/currentAtText"
                    style="@style/AtText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at" />

                <TextView
                    android:id="@+id/currentPeaceText"
                    style="@style/PeaceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peace" />
            </LinearLayout>

            <TextView
                android:id="@+id/timeTextTotal"
                style="@style/TotalTimeText"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_alignBottom="@+id/verticalSeekBar"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/verticalSeekBar"
                android:alpha="0.5"
                android:visibility="invisible" />

            <RelativeLayout
                android:layout_width="57dp"
                android:layout_height="408dp"
                android:layout_alignBottom="@+id/verticalSeekBar"
                android:layout_alignLeft="@+id/verticalSeekBar"
                android:layout_marginBottom="13.5dp"
                android:layout_marginLeft="13.5dp"
                android:gravity="bottom" >

                <View
                    android:id="@+id/progressView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/seekbar_progress_secondary" />

                <TextView
                    android:id="@+id/progressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/progressView"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="2dp"
                    android:textColor="#1D71B8"
                    android:textSize="14.sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/seekbar_background_off"
                android:layout_width="74dp"
                android:layout_height="432dp"
                android:layout_centerInParent="true"
                android:background="@drawable/seekbar_background_off" />

            <View
                android:id="@+id/seekbar_background_on"
                android:layout_width="74dp"
                android:layout_height="432dp"
                android:layout_centerInParent="true"
                android:background="@drawable/seekbar_background_on"
                android:visibility="invisible" />

            <org.fairphone.peaceofmind.ui.VerticalSeekBar
                android:id="@+id/verticalSeekBar"
                android:layout_width="81dp"
                android:layout_height="440dp"
                android:layout_centerHorizontal="true"
                android:max="100"
                android:padding="0dp"
                android:progressDrawable="@drawable/transparent"
                android:rotation="180"
                android:thumb="@drawable/seekbar_thumb_off"
                android:thumbOffset="0dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/helpButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_help" />
    </LinearLayout>

    <include layout="@layout/help_layout" />

</FrameLayout>